<resources>
    <string name="app_name">smartsell</string>
    <!-- Strings related to login -->
    <string name="prompt_email">请输入手机号码</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_blank">BlankActivity</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">首页</string>
    <string name="title_customerHandPick">客户精选</string>
    <string name="title_mine">我的</string>
    <string name="title_customer">客户动态</string>

    <string name="txt_name">风清扬</string>
    <string name="todo">TODO</string>
    <string name="title_activity_add_customer">AddCustomer</string>


    <string name="app_upgrade_tip_title">Release Notes (%1$s)</string>
    <string name="title_activity_login">Sign in</string>
    <string name="activity_login_forget_pone">输入您用于注册的手机号</string>
    <string name="activity_login_forget_verification">请输入手机验证码</string>
    <string name="activity_login_forget_verification_tv">获取验证码</string>
    <string name="activity_login_forget_password">请输入密码</string>
    <string name="activity_login_forget_name">请输入您的姓名（可选）</string>
    <string name="activity_login_forget_submit">提交</string>
    <string name="activity_register_bt_text">注册</string>
    <string name="activity_register_text">请输入6～16英文字母或者数字</string>
    <string name="activity_register_signup">我已阅读并同意小柠乐用户协议</string>
    <string name="activity_register_haveId">已有账号,去</string>
    <string name="activity_register_login">登录!</string>
</resources>
