<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.AddUser">

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="433dp"
        android:layout_height="0dp"
        android:layout_marginTop="200px"
        android:layout_marginBottom="196dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/add_form"
        android:layout_width="match_parent"
        android:layout_height="531dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView19">
        <LinearLayout
            android:id="@+id/add_user_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.qmuiteam.qmui.layout.QMUILinearLayout
                android:layout_width="match_parent"
                android:layout_height="150px"
                android:background="#fff"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/activity_regster_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/activity_login_forget_pone"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </com.qmuiteam.qmui.layout.QMUILinearLayout>
            <com.qmuiteam.qmui.layout.QMUILinearLayout
                android:layout_width="match_parent"
                android:layout_height="150px"
                android:background="#fff"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/activity_register_verification"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingLeft="@dimen/activity_margin"
                    android:hint="@string/activity_login_forget_verification"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:singleLine="true"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10px"
                    app:cardBackgroundColor="#03A9F4"
                    app:cardCornerRadius="6px">
                    <com.qmuiteam.qmui.layout.QMUIButton
                        android:id="@+id/activity_register_verification_bt"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="#00000000"
                        android:gravity="center"
                        android:text="@string/activity_login_forget_verification_tv"/>
                </androidx.cardview.widget.CardView>
            </com.qmuiteam.qmui.layout.QMUILinearLayout>
            <com.qmuiteam.qmui.layout.QMUILinearLayout
                android:layout_width="match_parent"
                android:layout_height="150px"
                android:background="#fff"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/activity_regster_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/activity_login_forget_password"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </com.qmuiteam.qmui.layout.QMUILinearLayout>
            <com.qmuiteam.qmui.layout.QMUILinearLayout
                android:layout_width="match_parent"
                android:layout_height="150px"
                android:background="#fff"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/activity_register_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/activity_login_forget_name"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </com.qmuiteam.qmui.layout.QMUILinearLayout>
            <com.qmuiteam.qmui.layout.QMUILinearLayout
                android:layout_width="match_parent"
                android:layout_height="150px"
                android:background="#fff"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <com.qmuiteam.qmui.layout.QMUIButton
                    android:id="@+id/activity_register_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/app_color_theme_6"
                    android:hint="注册账号"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/app_color_blue_3"
                    android:textStyle="bold" />
            </com.qmuiteam.qmui.layout.QMUILinearLayout>
            <com.qmuiteam.qmui.layout.QMUILinearLayout
                android:layout_width="match_parent"
                android:layout_height="150px"
                android:background="#fff"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <!--新用户注册-->
                <TextView
                    android:id="@+id/login_now"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="已经有账号？马上登录"
                    android:textSize="15sp"
                    android:paddingRight="10dp"/>
            </com.qmuiteam.qmui.layout.QMUILinearLayout>

        </LinearLayout>
        <!--分割线-->
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>